--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,15 +1,24 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-//@import "modules/mixins";
+
 body{
-  background: url("/images/background.jpg") no-repeat;
+  background: url("/assets/images/theme.jpg")no-repeat ;
+  background-position:center 0  ;
+  background-size: cover;
+  background-color: #000;
 }
+
 header{
-  background-color: lightseagreen;
+  background-color: white;
+}
+#logo{
+  margin-left: 16%;
+  width: 250px;
 }
 .container{
-  margin: auto 10%;
+  padding: 2em;
+  margin: auto 15%;
   min-height: 530px;
   height: auto;
+  background-color: white;
 }
 h2{
   margin: 0.5em;
@@ -19,25 +28,24 @@ h2{
 nav{
   text-transform: uppercase;
   font-size: 14px;
+  width:700px;
 }
 nav ul{
   display-list: none;
 }
 nav ul li{
   display: inline-block;
+  margin: auto 1em ;
 
 }
 nav ul li a{
-  color: white;
+  color: #262626;
   font-weight: normal;
   text-decoration: none;
-  padding: 0.5em 1em;
-  text-shadow:  0px 0px 1px seagreen;
 }
 
-nav a:hover, nav a:active, nav a:focus{
-  color: #fff;
-  text-decoration: underline;
+nav a:hover{
+
 }
 
 .abstract{
@@ -93,35 +101,35 @@ nav a:hover, nav a:active, nav a:focus{
 .pagination li a:hover, .pagination li a:active{
   text-decoration: underline;
 }
+
 footer{
-  padding: 0;
+  padding:0;
   width: 100%;
-  height: 80px;
-  background-color: lightskyblue;
+  height: 50px;
+  background-color: whitesmoke;
 }
 #navigation-footer{
-
-  margin-bottom: 20px;
   font-size: 12px;
   text-transform: uppercase;
+  height: 50px;
+  line-height: 50px;
 
 }
 #navigation-footer ul {
-  margin-top: 0;
 }
-#navigation-footer ul li{
-  margin: auto 1.5em;
-}
-#navigation-footer a{
-  color: white;
-  font-weight: bold;
-  text-shadow:  0px 1px 2px skyblue;
 
+#navigation-footer ul li{
+  margin:  auto 1em;
 }
-#navigation-footer a:hover, #navigation-footer a:active, #navigation-footer a:focus{
-  color: khaki;
-  text-shadow:  0px 1px 2px skyblue;
+
+#navigation-footer a{
+  color: #262626;
+  font-weight: bold;
 }
+#navigation-footer a:hover{
+  text-decoration: none;
+}
+
 .button{
   background-color: #67b168;
   padding: 0.5em 1.5em;
@@ -194,7 +202,6 @@ footer{
   border: 1px solid white;
   padding: 1em;
 }
-
 
 
 
