--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -165,6 +165,12 @@ width: 40%;
   border-bottom: 1px dashed #cccccc;
 }
 
+#mentions{
+  background-color: white;
+  padding: 1em;
+  border-bottom: 1px dashed #cccccc;
+}
+
 .password{
   width: 40%;
   height: 2.5em;
